--- a/src/pages/2020-12-26-A-neat-trick-for-testing-on-the-Play-Store.mdx
+++ b/src/pages/2020-12-26-A-neat-trick-for-testing-on-the-Play-Store.mdx
@@ -4,7 +4,14 @@ title:  "A neat trick for testing on the Play store"
 date:   2020-12-26 14:00 +1100
 ---
 
-import  review_test from './images/review_test.mp4';
+import  tester_distribution_list from './images/tester_distribution_list.png';
+import tester_link from './images/tester_link.png';
+import switch_accounts from './images/switch_accounts.png';
+import play_settings1 from './images/play_store_settings_1.png';
+import play_settings2 from './images/play_store_settings_2.png';
+import play_store from './images/play_store_1.png';
+import play_store_gotcha from './images/play_store_gotcha.png';
+
 
 <div className="blogpage">
     <a href={"/blog"} smooth duration={1000}>
@@ -15,119 +22,75 @@ import  review_test from './images/review_test.mp4';
 <div className="blogText">
 
 
-# Finally! In-App Reviews for Android using Playcore
+# A neat trick for testing on the Play store
 
 <br/>
 <br/>
 
-One of the coolest things about writing iOS apps are it's high-level APIs, for example one of my favourite things is how you can prompt the user to leave a review
-without getting them to ever leave your app. The best part of this? The code to request a review is ALSO super concise, like so:
+Hope you've had a Merry Christmas 🎄 and kept safe in these COVID-19 times!
 
-```
-import StoreKit
+<br/>
+<br/>
 
-class SomeViewController: UIViewController {
-        override func viewDidLoad() {
-        super.viewDidload()
-        if (shouldShowRatingDialog) {
-            //does anyone even still run iOS 10.3? 🤔
-            if #available( iOS 10.3,*){
-                SKStoreReviewController.requestReview()
-            }
-        }
-    }
-}
-```
+## Recap
 
-See how easy that is 🤩
+Firstly, let's do a quick recap of how test apk and aab distribution works on the Play store:
 
-Well, until just recently this was not even possible in Android. But with the new Playcore API, this is totally doable and even though not as easy as it's iOS counterpart, it's not super difficult. ✅
+Usually when we setup Internal and Alpha testers (testers within our own organisation), we add said testers' Google emails to a 
+distribution list on the Play Console, like so
 
-To get started, we first pull in the ```PlayCore``` library into our app level ```build.gradle```'s dependencies block. This can of course be different if you define your dependencies elsewhere.
+<img className="image" src= { tester_distribution_list } width="50%"/>
 
-### Gradle dependency
+Once this is set up, the user then goes to the internal or alpha testing link generated for the said track on the Play console:
 
-```
-implementation 'com.google.android.play:core:1.8.0'
-```
+<img className="image" src= { tester_link } width="20%"/>
 
-Next steps include thinking about how this screen can be presented to the end users. For example - presenting this option excessively might drive users away from reviewing your app, or worse yet, away from your app. The good thing about the StoreKit API on iOS is, you can just make the call to present the `SKStoreReviewController` and it automatically caps how often it appears for the user. Well, fret not, even the PlayCore In-app reviews API does this for us! This however, is a double-edged sword because when we first implement areas in our apps or games to prompt the user for a review, we want to ensure that it works! Well, on iOS the `SKStoreReviewController` actually always appears in a test build of the app, however on Android it's a little bit more complicated. More on that when we get to ```Testing``` below.
+When the user goes to the opt-in URL on their device, they can opt into testing the app like so
 
+For more information about tracks, distribution lists and opt-in urls, I previously wrote <a href={"/2019-09-28-Relasing-an-app"} smooth duration={1000}>this post</a>
 
-### Implementation
+<br/>
+<br/>
 
-To show users the prompt, I create a blocking `ProgressBar`, contained within a ```Framelayout``` like so. This is just an example, but it makes sense because the API is asynchronous, so there is a little bit of waiting for the user before the prompt can appear.
+## But what if...
 
-```    
-<FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+Ok so your tester distribution list is receiving your binaries and testing's going real smooth. Glad to hear it. Because the tester distribution list
+uses the Play Store app to download test binaries there is a bit of a conundrum. Suppose they want to do a quick comparison with the current production app.
+Does that mean they now have to go through the opt-out process? So everytime they want to switch between the alpha/beta tracks and the production trackc, this
+would be super tedious, right? Sure would!
 
-        <ProgressBar
-            android:id="@+id/progress_vocab_term"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_gravity="center"
-            android:visibility="gone" />
-    </FrameLayout>
-```
+Well, here's a neat trick.
 
-As a rule of thumb, this can be presented when the user is already waiting for a screen to load within a game - such as a transition between level ups, or in my case, a slang term to finish loading! 
+You might already know that the Play Store app allows multiple login accounts. These can be switched by tapping the Avatar picture of your account:
 
-The Playcore API gives us a ```ReviewManagerFactory``` to create an instance of the ```ReviewManager```.
+<img className="image" src= { switch_accounts } width="20%"/>
+<br/>
+<br/>
 
-Called within an activity or a fragment, we can either use `this` (Activity) or `requireContext()` (Fragment)
+Before doing this though, you need to clear the cache of the Play Store app. This is done by going to the Play Store's app's settings.
 
-Once available, we can `requestReviewFlow()` and add a `completionListener` as this is a deferred `Task`, because of asynchronous nature. This is also about the time you would show a blocking `ProgressBar`.
+<img className="image" src={ play_settings1 } width="15%" />
 
-This can be abstracted into a function that takes a boolean like so:
+<br/>
+<br/>
 
-```
-fun toggleProgressBar(visible: Boolean) {
-    if (visible) {
-        progress_bar.visibility = View.Visible
-        content_view.visibility = View.Gone
-    } else {
-        progress_bar.visibility = View.Gone
-        contente_view.visibility = View.Visible
-    }
-}
-```
-Now we can start our In-app Review flow, first by grabbing the `ReviewManager` then requesting a `ReviewInfo` object by calling `requestReviewFlow()`, then passing it to `launchReviewFlow()`
+<img className="image" src={ play_settings2 } width="15%" />
 
-```
-        val reviewManager = ReviewManagerFactory.create(this)
-        toggleProgressBar(visible = true)
-        reviewManager.requestReviewFlow().addOnCompleteListener {
-            if (it.isComplete) {
-                val info = it.result //your reviewInfo object
-                reviewManager.launchReviewFlow(this, info).addOnCompleteListener { 
-                    //the flow completed successfully. The user either left you a review 👍🏽 or dismissed the review prompt 🙀
-                    toggleProgressBar(visible = false) 
-                }
-            } else {
-                //something went wrong, the review flow couldn't be completed
-                toggleProgressBar(visible = false)
-            }
-        }
-```
+<br/>
+<br/>
 
-### Testing
+Now if you switch accounts to an account that is NOT on the tester distribution list, you should be able to download the production binary!
 
-- Testing this behaviour is a little bit tricky. The easiest way is to create an `Internal Testing Track` build and rollout to your internal testers. I know this sounds like a bit of work but in practice this is super quick! Internal testing builds are available to testers within a few minutes of uploading (unless it's the first ever build, which can take up to 48 hours!). 👋
+<img className="image" src={ play_store } width="15%" />
 
-- Once the tester gets the build, you can **run local builds**! 👏
+<br/>
+<br/>
 
-- In the testing track builds the review prompt has no quotas so test away! 🚗
+# A quick gotcha
 
-- If a testing user leaves a review during the test, the prompt **won't** show again. But the tester can just as easily go to the Play store `Internal Testing` build and remove their review to re-enable the prompt! 🤝
+If you get a warning such as the one below -- the Play store cache has not been cleared properly! This means Play Store is remembering that one
+of your accounts is on the tester distribution list! Just follow the steps above to clear the cache and data for the Play Store app!ß
 
-- I would not recommend creating an `Alpha` track build! These go through reviews! And of course `Beta` track is open to everyone in the world, so definitely also not recommended. 🚫
-
-
-
-<div align="center">
-    <video width="30%" controls autostart autoPlay src={review_test} type="video/mp4" />
-</div>
+<img className="image" src= { play_store_gotcha } width="15%" />
 
 </div>
