--- a/src/pages/2022-03-17-Firebase-remove-unused-push-tokens.mdx
+++ b/src/pages/2022-03-17-Firebase-remove-unused-push-tokens.mdx
@@ -1,6 +1,6 @@
 ---
 slug: "2022-03-17-Firebase-remove-unused-push-tokens"
-title:  "Removing unused Firebase push tokens silently"
+title:  "Invalidating unused Firebase push tokens using scheduled functions"
 date:   2022-03-17 21:30 +1100
 categories: "blog"
 ---
@@ -13,7 +13,7 @@ categories: "blog"
 
 <div className="blogText">
 
-# Removing Firebase push tokens silently.
+# Invalidating unused Firebase push tokens using scheduled functions
 
 <br/>
 <br/>
