--- a/src/pages/2022-03-17-Firebase-remove-unused-push-tokens.mdx
+++ b/src/pages/2022-03-17-Firebase-remove-unused-push-tokens.mdx
@@ -13,7 +13,7 @@ categories: "blog"
 
 <div className="blogText">
 
-<p> Invalidating unused Firebase push tokens using scheduled functions </p>
+# Invalidating unused Firebase push tokens using scheduled functions
 
 <br/>
 <br/>
